--- a/src/TidyWindow.App/Views/EssentialsPage.xaml
+++ b/src/TidyWindow.App/Views/EssentialsPage.xaml
@@ -130,11 +130,15 @@
         </Style>
     </Page.Resources>
 
-    <ScrollViewer Margin="32"
+    <ScrollViewer x:Name="ContentScrollViewer"
+                  Margin="32"
                   VerticalScrollBarVisibility="Auto"
-                  HorizontalScrollBarVisibility="Disabled"
-                  CanContentScroll="False">
-        <Grid MinWidth="760">
+                  HorizontalScrollBarVisibility="Auto"
+                  CanContentScroll="False"
+                  PanningMode="VerticalOnly"
+                  SizeChanged="ContentScrollViewer_SizeChanged">
+        <Grid x:Name="PageContentGrid"
+              MinWidth="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -163,14 +167,25 @@
                 </StackPanel>
             </StackPanel>
 
-            <Grid Grid.Row="1"
+            <Grid x:Name="MainLayoutGrid"
+                  Grid.Row="1"
                   Margin="0,28,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition x:Name="PrimaryColumnDefinition"
+                                      Width="3*"
+                                      MinWidth="360"/>
+                    <ColumnDefinition x:Name="SecondaryColumnDefinition"
+                                      Width="2*"
+                                      MinWidth="320"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0"
+                <StackPanel x:Name="PrimaryColumnHost"
+                            Grid.Row="0"
+                            Grid.Column="0"
                             Margin="0,0,24,0">
                     <Border Style="{StaticResource EssentialsCardStyle}"
                             Padding="16"
@@ -361,14 +376,14 @@
                                                         </DataTemplate>
                                                     </ItemsControl.ItemTemplate>
                                                 </ItemsControl>
-                        <TextBlock Text="{Binding LastStatus}"
-                               Margin="0,8,0,0"
-                               FontSize="12"
-                               Foreground="#22C55E">
+                                                <TextBlock Text="{Binding LastStatus}"
+                                                           Margin="0,8,0,0"
+                                                           FontSize="12"
+                                                           Foreground="#22C55E">
                                                     <TextBlock.Style>
                                                         <Style TargetType="TextBlock">
-                                <Setter Property="Visibility"
-                                    Value="Visible"/>
+                                                            <Setter Property="Visibility"
+                                                                    Value="Visible"/>
                                                             <Style.Triggers>
                                                                 <DataTrigger Binding="{Binding LastStatus}"
                                                                              Value="{x:Null}">
@@ -390,16 +405,16 @@
                                                     </TextBlock.Style>
                                                 </TextBlock>
                                             </StackPanel>
-                        <StackPanel Grid.Column="1"
-                            VerticalAlignment="Center"
+                                            <StackPanel Grid.Column="1"
+                                                        VerticalAlignment="Center"
                                                         Orientation="Vertical"
                                                         MinWidth="96">
-                        <Button Content="Run"
+                                                <Button Content="Run"
                                                         Command="{Binding DataContext.QueueTaskCommand, RelativeSource={RelativeSource AncestorType=ListBox}}"
                                                         CommandParameter="{Binding}"
-                            MinWidth="96"
-                            HorizontalAlignment="Stretch"
-                            Style="{StaticResource EssentialsAccentButtonStyle}"/>
+                                                        MinWidth="96"
+                                                        HorizontalAlignment="Stretch"
+                                                        Style="{StaticResource EssentialsAccentButtonStyle}"/>
                                                 <TextBlock Text="Queued"
                                                            Margin="0,8,0,0"
                                                            Foreground="#94A3B8"
@@ -415,7 +430,9 @@
                     </Border>
                 </StackPanel>
 
-                <StackPanel Grid.Column="1">
+                <StackPanel x:Name="SecondaryColumnHost"
+                            Grid.Row="0"
+                            Grid.Column="1">
                     <Border Style="{StaticResource EssentialsCardStyle}"
                             Margin="0,0,0,20">
                         <Grid>
@@ -455,7 +472,8 @@
                                 </StackPanel>
                             </Grid>
 
-                            <ListView Grid.Row="1"
+                            <ListView x:Name="OperationsListView"
+                                      Grid.Row="1"
                                       ItemsSource="{Binding Operations}"
                                       SelectedItem="{Binding SelectedOperation, Mode=TwoWay}"
                                       Background="Transparent"
@@ -538,15 +556,15 @@
                                                            FontSize="12"
                                                            TextWrapping="Wrap"
                                                            Margin="0,4,0,0"/>
-                        <StackPanel Orientation="Horizontal"
-                                Margin="0,6,0,0">
-                            <TextBlock Text="{Binding AttemptLabel}"
-                                   Foreground="#CBD5F5"
-                                   FontSize="11">
+                                                <StackPanel Orientation="Horizontal"
+                                                            Margin="0,6,0,0">
+                                                    <TextBlock Text="{Binding AttemptLabel}"
+                                                               Foreground="#CBD5F5"
+                                                               FontSize="11">
                                                         <TextBlock.Style>
                                                             <Style TargetType="TextBlock">
-                                <Setter Property="Visibility"
-                                    Value="Visible"/>
+                                                                <Setter Property="Visibility"
+                                                                        Value="Visible"/>
                                                                 <Style.Triggers>
                                                                     <DataTrigger Binding="{Binding AttemptLabel}"
                                                                                  Value="{x:Null}">
@@ -568,19 +586,19 @@
                                                                Margin="8,0,0,0">
                                                         <TextBlock.Style>
                                                             <Style TargetType="TextBlock">
-                                <Setter Property="Visibility"
-                                    Value="Visible"/>
+                                                                <Setter Property="Visibility"
+                                                                        Value="Visible"/>
                                                                 <Style.Triggers>
                                                                     <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource Self}}"
                                                                                  Value="">
                                                                         <Setter Property="Visibility"
                                                                                 Value="Collapsed"/>
                                                                     </DataTrigger>
-                                    <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource Self}}"
-                                         Value="{x:Null}">
-                                    <Setter Property="Visibility"
-                                        Value="Collapsed"/>
-                                    </DataTrigger>
+                                                                    <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource Self}}"
+                                                                                 Value="{x:Null}">
+                                                                        <Setter Property="Visibility"
+                                                                                Value="Collapsed"/>
+                                                                    </DataTrigger>
                                                                 </Style.Triggers>
                                                             </Style>
                                                         </TextBlock.Style>
