--- a/src/TidyWindow.App/Views/PackageMaintenancePage.xaml
+++ b/src/TidyWindow.App/Views/PackageMaintenancePage.xaml
@@ -224,7 +224,7 @@
                 <StackPanel Orientation="Horizontal"
                             Margin="0,6,0,0"
                             VerticalAlignment="Center">
-                    <TextBlock Text="{Binding StatusDisplay}" 
+                    <TextBlock Text="{Binding StatusDisplay}"
                                FontWeight="SemiBold"
                                Margin="0,0,12,0">
                         <TextBlock.Style>
@@ -551,11 +551,15 @@
         </DataTemplate>
     </Page.Resources>
 
-    <ScrollViewer Margin="32"
+    <ScrollViewer x:Name="ContentScrollViewer"
+                  Margin="32"
                   VerticalScrollBarVisibility="Auto"
-                  HorizontalScrollBarVisibility="Disabled"
-                  CanContentScroll="False">
-        <Grid MinWidth="760">
+                  HorizontalScrollBarVisibility="Auto"
+                  CanContentScroll="False"
+                  PanningMode="VerticalOnly"
+                  SizeChanged="ContentScrollViewer_SizeChanged">
+        <Grid x:Name="PageContentGrid"
+              MinWidth="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
@@ -619,16 +623,25 @@
                 </StackPanel>
             </Grid>
 
-            <Grid Grid.Row="1"
+            <Grid x:Name="MainLayoutGrid"
+                  Grid.Row="1"
                   Margin="0,28,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"
+                    <ColumnDefinition x:Name="PrimaryColumnDefinition"
+                                      Width="3*"
                                       MinWidth="360"/>
-                    <ColumnDefinition Width="2*"
+                    <ColumnDefinition x:Name="SecondaryColumnDefinition"
+                                      Width="2*"
                                       MinWidth="320"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0">
+                <StackPanel x:Name="PrimaryColumnHost"
+                            Grid.Row="0"
+                            Grid.Column="0">
                     <Border Style="{StaticResource CardBorderStyle}"
                             Margin="0,0,0,20">
                         <Grid>
@@ -866,7 +879,7 @@
                                     </ListView.ItemContainerStyle>
                                     <ListView.View>
                                         <GridView x:Name="PackagesGridView"
-                                                 AllowsColumnReorder="False">
+                                                  AllowsColumnReorder="False">
                                             <GridView.ColumnHeaderContainerStyle>
                                                 <Style TargetType="GridViewColumnHeader">
                                                     <Setter Property="Foreground"
@@ -1127,7 +1140,9 @@
                     </Border>
                 </StackPanel>
 
-                <StackPanel Grid.Column="1"
+                <StackPanel x:Name="SecondaryColumnHost"
+                            Grid.Row="0"
+                            Grid.Column="1"
                             Margin="16,0,0,0">
                     <Border Style="{StaticResource CardBorderStyle}"
                             Padding="20"
@@ -1163,7 +1178,8 @@
                                         Style="{StaticResource SecondaryButtonStyle}"/>
                             </WrapPanel>
 
-                            <ListView Grid.Row="2"
+                            <ListView x:Name="OperationsListView"
+                                      Grid.Row="2"
                                       Margin="0,16,0,0"
                                       ItemsSource="{Binding Operations}"
                                       SelectedItem="{Binding SelectedOperation, Mode=TwoWay}"
